[gd_scene load_steps=11 format=3 uid="uid://duhxbssywuca6"]

[ext_resource type="FontFile" uid="uid://bhdqmtgny5scj" path="res://assets/fonts/Nunito/Nunito-VariableFont_wght.ttf" id="1_7tv6h"]
[ext_resource type="Script" path="res://scn/main/Control.gd" id="1_r4mdu"]
[ext_resource type="Texture2D" uid="uid://baxlfs07rhk44" path="res://assets/img/icons/google-icons/add_person/2x/baseline_person_add_white_24dp.png" id="3_1jkb5"]
[ext_resource type="StyleBox" uid="uid://bb8p7t0x5qhla" path="res://assets/styles/button/normal.tres" id="3_5uoef"]
[ext_resource type="StyleBox" uid="uid://demuxbgcdpkai" path="res://assets/styles/button/hover.tres" id="4_3en2u"]
[ext_resource type="PackedScene" uid="uid://pon5j0lsdfbm" path="res://scn/access_container/AccessContainer.tscn" id="4_lfa7n"]
[ext_resource type="PackedScene" uid="uid://cqlof67jl1gpm" path="res://scn/add_account_container/add_account_container.tscn" id="7_1fd0h"]

[sub_resource type="FontVariation" id="FontVariation_yatd6"]
base_font = ExtResource("1_7tv6h")
variation_opentype = {
2003265652: 600
}
variation_embolden = 0.3
opentype_features = {
1667330917: 1,
1818847073: 1,
1935764596: 17,
1936928817: 1,
1953396077: 1
}

[sub_resource type="Theme" id="Theme_727ao"]
default_font = SubResource("FontVariation_yatd6")
default_font_size = 18

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_niud4"]
content_margin_left = 20.0
content_margin_top = 20.0
content_margin_right = 20.0
content_margin_bottom = 20.0

[node name="Main" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_727ao")
script = ExtResource("1_r4mdu")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.12549, 0.133333, 0.145098, 1)

[node name="Container" type="VBoxContainer" parent="."]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 16.0
offset_top = 16.0
offset_right = -16.0
offset_bottom = -16.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 10
alignment = 1

[node name="Buttons" type="HBoxContainer" parent="Container"]
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="Container/Buttons"]
layout_mode = 2
size_flags_horizontal = 3
text = "Open Authenticator"
horizontal_alignment = 1
vertical_alignment = 1

[node name="AddAccount" type="Button" parent="Container/Buttons"]
custom_minimum_size = Vector2(40, 40)
layout_mode = 2
tooltip_text = "Add a new account"
theme_override_styles/normal = ExtResource("3_5uoef")
theme_override_styles/hover = ExtResource("4_3en2u")
icon = ExtResource("3_1jkb5")
icon_alignment = 1

[node name="TOTPScrollContainer" type="ScrollContainer" parent="Container"]
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxEmpty_niud4")
horizontal_scroll_mode = 3

[node name="TOTPList" type="VBoxContainer" parent="Container/TOTPScrollContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 20

[node name="AccessContainer" parent="." instance=ExtResource("4_lfa7n")]
visible = false
layout_mode = 1

[node name="AddAccountContainer" parent="." instance=ExtResource("7_1fd0h")]
visible = false
layout_mode = 1

[connection signal="pressed" from="Container/Buttons/AddAccount" to="." method="_on_button_pressed"]
[connection signal="accounts_read" from="AccessContainer" to="." method="_on_access_container_accounts_read"]
[connection signal="unlock_failed" from="AccessContainer" to="." method="_on_access_container_unlock_failed"]
[connection signal="add_account" from="AddAccountContainer" to="." method="_on_add_account_container_add_account"]
